Add barcode scanning

--- a/MedicalLaboratoryNumber20App.csproj
+++ b/MedicalLaboratoryNumber20App.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Models\Entities\UserType.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Services\BarcodeScannerService.cs" />
     <Compile Include="Services\BarcodeService.cs" />
     <Compile Include="Services\CaptchaService.cs" />
     <Compile Include="Services\ControlImageService.cs" />
@@ -173,6 +174,7 @@
     <Compile Include="Services\LoginHistoryService.cs" />
     <Compile Include="Services\MessageBoxService.cs" />
     <Compile Include="Services\ByteArrayToPdfExportService.cs" />
+    <Compile Include="Services\IScannerService.cs" />
     <Compile Include="Services\TimerService.cs" />
     <Compile Include="Views\Pages\AccountantPages\AccountantPage.xaml.cs">
       <DependentUpon>AccountantPage.xaml</DependentUpon>
