--- a/MedicalLaboratoryNumber20App.csproj
+++ b/MedicalLaboratoryNumber20App.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Services\MessageBoxService.cs" />
     <Compile Include="Services\ByteArrayToPdfExportService.cs" />
     <Compile Include="Services\IScannerService.cs" />
+    <Compile Include="Services\ServiceEqualityComparer.cs" />
     <Compile Include="Services\TimerService.cs" />
     <Compile Include="Views\Pages\AccountantPages\AccountantPage.xaml.cs">
       <DependentUpon>AccountantPage.xaml</DependentUpon>
