Remove an unperformed service from the unperformed services list when it was sent

--- a/MedicalLaboratoryNumber20App.csproj
+++ b/MedicalLaboratoryNumber20App.csproj
@@ -121,6 +121,7 @@
     </Compile>
     <Compile Include="Models\Barcode.cs" />
     <Compile Include="Models\BarcodeStrip.cs" />
+    <Compile Include="Models\BloodStatuses.cs" />
     <Compile Include="Models\CaptchaLetter.cs" />
     <Compile Include="Models\Entities\Analyzer.cs">
       <DependentUpon>BaseModel.tt</DependentUpon>
