--- a/MedicalLaboratoryNumber20App.csproj
+++ b/MedicalLaboratoryNumber20App.csproj
@@ -184,8 +184,9 @@
       <DependentUpon>BaseModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ExecutingService.cs" />
-    <Compile Include="Models\PostService.cs" />
-    <Compile Include="Models\SimpleService.cs" />
+    <Compile Include="Models\GetServiceList.cs" />
+    <Compile Include="Models\PostServiceList.cs" />
+    <Compile Include="Models\SerializedService.cs" />
     <Compile Include="Services\BarcodeScannerService.cs" />
     <Compile Include="Services\BarcodeService.cs" />
     <Compile Include="Services\ServiceEqualityComparer.cs" />
