Add representing quality control as a table

--- a/MedicalLaboratoryNumber20App.csproj
+++ b/MedicalLaboratoryNumber20App.csproj
@@ -198,6 +198,7 @@
     </Compile>
     <Compile Include="Models\GetServiceList.cs" />
     <Compile Include="Models\PostServiceList.cs" />
+    <Compile Include="Models\QualityControlPointPair.cs" />
     <Compile Include="Models\SerializedService.cs" />
     <Compile Include="Services\BarcodeScannerService.cs" />
     <Compile Include="Services\BarcodeService.cs" />
