Add showing the applied services as a chart

--- a/MedicalLaboratoryNumber20App.csproj
+++ b/MedicalLaboratoryNumber20App.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Models\PostServiceList.cs" />
     <Compile Include="Models\QualityControlPointPair.cs" />
     <Compile Include="Models\SerializedService.cs" />
+    <Compile Include="Models\ServiceAndApplyPoint.cs" />
     <Compile Include="Services\BarcodeScannerService.cs" />
     <Compile Include="Services\BarcodeService.cs" />
     <Compile Include="Services\InsuranceCompanyReportService.cs" />
